--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timed Quiz</title>
-    <link rel="stylesheet" a href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="home" id="flex-column">
+            <h1>Timed Quiz</h1>
+            <a class="btn" href="./quiz.html">Start</a>
+            <a class="btn" href="./highscores.html">High Scores</a>
+        </div>
+    </div>
 </body>
 
 </html>
