--- a/quiz.html
+++ b/quiz.html
@@ -13,6 +13,31 @@
 <body>
     <div class="container">
         <div id="game" class="justify-center flex-column">
+            <div id="hud">
+                <div id="hud-item">
+                    <div class="p hud-prefix">
+                        <p>
+                            Question
+                        </p>
+                        <h1 class="hud-main-text" id="questioncounter">
+                            1/3
+                        </h1>
+                    </div>
+                </div>
+            </div>
+
+            <div id="hud">
+                <div id="hud-item">
+                    <div class="p hud-prefix">
+                        <p>
+                            Score
+                        </p>
+                        <h1 class="hud-main-text" id="score">
+                            0
+                        </h1>
+                    </div>
+                </div>
+            </div>
             <h2 id="question">What is the answer to this questions?</h2>
             <div class="choice-container">
                 <p class="choice-prefix">A</p>
