--- a/quiz.html
+++ b/quiz.html
@@ -11,31 +11,16 @@
 </head>
 
 <body>
+
     <div class="container">
         <div id="game" class="justify-center flex-column">
             <div id="hud">
                 <div id="hud-item">
-                    <div class="p hud-prefix">
-                        <p>
-                            Question
-                        </p>
-                        <h1 class="hud-main-text" id="questioncounter">
-                            1/3
-                        </h1>
-                    </div>
-                </div>
-            </div>
-
-            <div id="hud">
-                <div id="hud-item">
-                    <div class="p hud-prefix">
-                        <p>
-                            Score
-                        </p>
-                        <h1 class="hud-main-text" id="score">
-                            0
-                        </h1>
-                    </div>
+                    <p class="hud-prefix">
+                        Question
+                    </p>
+                    <h1 class="hud-main-text" id="questioncounter">
+                    </h1>
                 </div>
             </div>
             <h2 id="question">What is the answer to this questions?</h2>
