--- a/end.html
+++ b/end.html
@@ -7,12 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Congrats!</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="game.css" />
 </head>
 
 <body>
     <div class="container">
         <div id="end" class="flex-center flex-column">
-            <h1 id="finalScore"></h1>
+            <h1 id="finalScore">0</h1>
             <form>
                 <input type="text" name="username" id="username" placeholder="username" />
                 <button type="submit" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>
@@ -24,6 +25,7 @@
         </div>
     </div>
     <script src="end.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
