--- a/end.html
+++ b/end.html
@@ -13,15 +13,15 @@
 <body>
     <div class="container">
         <div id="end" class="flex-center flex-column">
-            <h1 id="finalScore">0</h1>
+            <h1 id="finalScore"></h1>
             <form>
                 <input type="text" name="username" id="username" placeholder="username" />
                 <button type="submit" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>
             Save
           </button>
             </form>
-            <a class="btn" href="/game.html">Play Again</a>
-            <a class="btn" href="/">Go Home</a>
+            <a class="btn" href="game.html">Play Again</a>
+            <a class="btn" href="index.html">Go Home</a>
         </div>
     </div>
     <script src="end.js"></script>
