--- a/quiz.html
+++ b/quiz.html
@@ -19,7 +19,14 @@
                     <p class="hud-prefix">
                         Question
                     </p>
-                    <h1 class="hud-main-text" id="questioncounter">
+                    <h1 class="hud-main-text" id="questionCounter"></h1>
+                </div>
+                <div id="hud-item">
+                    <p class="hud-prefix">
+                        Score
+                    </p>
+                    <h1 class="hud-main-text" id="score">
+
                     </h1>
                 </div>
             </div>
