--- a/quiz.html
+++ b/quiz.html
@@ -11,22 +11,24 @@
 </head>
 
 <body>
-
     <div class="container">
-        <div id="game" class="justify-center flex-column">
+        <div id="loader"></div>
+        <div id="game" class="justify-center flex-column hidden">
             <div id="hud">
                 <div id="hud-item">
-                    <p class="hud-prefix">
+                    <p id="progressText" class="hud-prefix">
                         Question
                     </p>
-                    <h1 class="hud-main-text" id="questionCounter"></h1>
+                    <div id="progressBar">
+                        <div id="progressBarFull"></div>
+                    </div>
                 </div>
                 <div id="hud-item">
                     <p class="hud-prefix">
                         Score
                     </p>
                     <h1 class="hud-main-text" id="score">
-
+                        0
                     </h1>
                 </div>
             </div>
