--- a/quiz.html
+++ b/quiz.html
@@ -2,18 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
-    <link rel="stylesheet" href="game.css">
-    <link rel="stylesheet" href="styles.css">
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Quick Quiz - Play</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="game.css" />
 </head>
 
 <body>
     <div class="container">
-        <div id="loader"></div>
-        <div id="game" class="justify-center flex-column hidden">
+        <div id="game" class="justify-center flex-column">
             <div id="hud">
                 <div id="hud-item">
                     <p id="progressText" class="hud-prefix">
@@ -51,7 +50,7 @@
             </div>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
