--- a/quiz.html
+++ b/quiz.html
@@ -13,6 +13,7 @@
 <body>
     <div class="container">
         <div id="game" class="justify-center flex-column">
+            <div id="count">Start</div>
             <div id="hud">
                 <div id="hud-item">
                     <p id="progressText" class="hud-prefix">
